server update API格式!!
