# lib/api.js
@@ -1,6 +1,7 @@
 "use strict"
 
 const express = require('express');
+const moment = require('moment');
 const logger = require('./logger').getLogger('[API]');
 const XSDocDB = require('../lib/xsdocdb');
 const XSService = require('../lib/xsservice');
@@ -48,7 +49,7 @@ class API {
     }
 
     /**
-     * http://<server>/api/symboldata?symbol=2330.TW&freq=8&fields=外資買賣超;1234&count=20
+     * http://<server>/api/symboldata?symbol=2330.TW&freq=8&fields=3054;3055&startdate=20210101&enddate=20210131
      * 
      * @param {*} req 
      * @param {*} res 
@@ -68,8 +69,30 @@ class API {
             if (!fields)
                 throw `Missing argument: fields`;
     
-            let count = req.query.count || '20';
-            let records = await this.xsservice.queryFieldData(symbol, freq, fields, count);
+            let startDate;
+            if (req.query.startdate) {
+                startDate = moment(req.query.startdate);
+                if (!startDate.isValid())
+                    throw `Invalid argument: startdate. Please specify as YYYYMMDD format.`;
+            }
+            else {
+                startDate = moment().startOf('year');
+            }
+
+            let endDate;
+            if (req.query.enddate) {
+                endDate = moment(req.query.enddate);
+                if (!endDate.isValid())
+                    throw `Invalid argument: enddate. Please specify as YYYYMMDD format.`;
+            }
+            else {
+                endDate = moment();
+            }
+
+            if (startDate.isAfter(endDate))
+                throw `Invalid argument: startdate is after enddate.`;
+
+            let records = await this.xsservice.queryFieldData(symbol, freq, fields, startDate.format("YYYYMMDD"), endDate.format("YYYYMMDD"));
             res.json({symbol, freq, records});    
         }
         catch(exception) {
